--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -196,9 +196,7 @@ Style/LineEndConcatenation:
   Enabled: false
 
 Metrics/LineLength:
-  Description: 'Limit lines to 80 characters.'
-  StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#80-character-limits'
-  Max: 80
+  Enabled: false # Override
 
 Metrics/MethodLength:
   Description: 'Avoid methods longer than 10 lines of code.'
