Limit gem publishing to tagged commits

--- a/.drone.yml
+++ b/.drone.yml
@@ -24,6 +24,6 @@ steps:
     environment:
       GEM_HOST_API_KEY:
         from_secret: RUBYGEMS_API_KEY
-    #when:
-    #  event:
-    #    - tag
+    when:
+      event:
+        - tag
